--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -571,6 +571,17 @@
                         <span translate="DEFAULT.NAV.OPT_ACCOUNT_DETAILS"></span>
                       </div>
                       <div class="line_separator_options"></div>
+                      <div class="option" [routerLink]="['/', translate.currentLang, 'account']"
+                        fragment="notifications" routerLinkActive="active">
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M7.35018 3.94025L7.99735 3.80606L4.71429 7.24363C4.71441 6.46126 4.97988 5.70544 5.46206 5.10391C5.94395 4.50274 6.61175 4.09337 7.35018 3.94025ZM7.99735 3.80606L4.71429 7.24375C4.71427 7.80105 4.59812 9.1798 4.31871 10.5359C4.19246 11.1487 4.02678 11.7876 3.81025 12.3603L12.1898 12.3603C11.9732 11.7876 11.8075 11.1487 11.6813 10.5359C11.4019 9.1797 11.2857 7.80084 11.2857 7.24363C11.2857 5.59965 10.1412 4.24699 8.6514 3.94058L7.99735 3.80606ZM2 13.3603L3.32694 13.3603L12.6731 13.3603L14 13.3603C13.7172 13.1681 13.4758 12.8109 13.2714 12.3603C12.5465 10.7628 12.2857 7.99201 12.2857 7.24363C12.2857 5.12901 10.8114 3.36391 8.85286 2.96108C8.86482 2.83958 8.85167 2.71688 8.81426 2.60087C8.77684 2.48487 8.716 2.37815 8.63564 2.2876C8.55528 2.19705 8.4572 2.12467 8.34772 2.07513C8.23823 2.02559 8.11978 2 8 2C7.88022 2 7.76177 2.02559 7.65228 2.07513C7.5428 2.12467 7.44472 2.19705 7.36436 2.2876C7.28401 2.37815 7.22316 2.48487 7.18574 2.60087C7.14833 2.71688 7.13518 2.83958 7.14714 2.96108C6.17833 3.16197 5.30739 3.69802 4.6818 4.47846C4.05621 5.25889 3.71441 6.23575 3.71429 7.24363C3.71429 7.99201 3.45353 10.7628 2.72864 12.3603C2.5242 12.8109 2.28284 13.1681 2 13.3603ZM9.06048 14.4314C8.77918 14.7155 8.39765 14.8751 7.99983 14.8751C7.602 14.8751 7.22047 14.7155 6.93917 14.4314C6.65786 14.1473 6.49983 13.7621 6.49983 13.3604L9.49983 13.3604C9.49983 13.7621 9.34179 14.1473 9.06048 14.4314Z"
+                            fill="#2C3B47" />
+                        </svg>
+
+                        <span translate="DEFAULT.NAV.OPT_NOTIFICATION_SETTINGS"></span>
+                      </div>
+                      <div class="line_separator_options"></div>
                       <div class="option logout_option" (click)="app.logout()">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
