--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -1112,7 +1112,7 @@
                 </ng-container>
               </div>
             </ng-container>
-            <ng-container *ngIf="topic.status !== TopicService.STATUSES.ideation">
+            <ng-container *ngIf="topic.status !== TopicService.STATUSES.ideation || TopicArgumentService.count.value.total">
               <div class="item_header">
                 <div class="item_title" translate="VIEWS.TOPICS_TOPICID.STATE_ITEM_DISCUSSION_HEADING"></div>
                 <div class="item_title" translate="VIEWS.TOPICS_TOPICID.STATE_ITEM_DISCUSSION_CONTRIBUTION"
