--- a/src/app/topic/components/topic-arguments/topic-arguments.component.html
+++ b/src/app/topic/components/topic-arguments/topic-arguments.component.html
@@ -197,7 +197,7 @@
       </defs>
     </svg>
     <div class="description_heading" translate="COMPONENTS.TOPIC_ARGUMENTS.NO_ARGUMENTS_HEADING"></div>
-    <div class="button">
+    <div class="button" *ngIf="TopicService.canDelete(topic)">
       <button class="btn_medium_submit" (click)="doAddArgument()">
         <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -205,7 +205,7 @@
             fill="white" />
         </svg>
 
-        <span translate="COMPONENTS.TOPIC_ARGUMENTS.NO_ARGUMENTS_BTN_ADD"></span></button>
+        <span [translate]="(topic.status === TopicService.STATUSES.ideation)? 'COMPONENTS.TOPIC_ARGUMENTS.NO_ARGUMENTS_BTN_START_DISCUSSION' :'COMPONENTS.TOPIC_ARGUMENTS.NO_ARGUMENTS_BTN_ADD'"></span></button>
     </div>
     <div class="no_feature_description">
       <div class="description_text">
