--- a/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.html
+++ b/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.html
@@ -148,7 +148,10 @@
             <!-- VOTE ENDED-->
             <ng-container *ngIf="hasVoteEndedExpired() &&(!userHasVoted || !editVote)">
               <div class="text_area">
-                <div class="bold" translate="COMPONENTS.TOPIC_VOTE_CAST.HEADING_VOTE_ENDED"></div>
+                <div class="bold with_tooltip" translate="COMPONENTS.TOPIC_VOTE_CAST.HEADING_VOTE_ENDED"><div class="tooltip" tooltip>
+                  <div class="content_title">Help on its way</div>
+                  <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
+                </div></div>
                 <div *ngIf="canUpdate()" translate="COMPONENTS.TOPIC_VOTE_CAST.VOTE_TXT_VOTE_ENDED"></div>
                 <div class="links_wrap" *ngIf="canUpdate()">
                   <a [href]="vote.downloads.bdocVote"
@@ -166,6 +169,10 @@
                       </defs>
                     </svg>
                     <span translate="COMPONENTS.TOPIC_VOTE_CAST.BTN_DOWNLOAD_USER_BDOC"></span>
+                    <div class="tooltip" tooltip>
+                      <div class="content_title">Help on its way</div>
+                      <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
+                    </div>
                   </a>
 
                   <ng-container *ngIf="vote.authType===VOTE_AUTH_TYPES.hard">
@@ -185,6 +192,10 @@
                         </svg>
                       </div>
                       <span translate="COMPONENTS.TOPIC_VOTE_CAST.FINAL_OPTION_WITHOUT_CSV"></span>
+                      <div class="tooltip" tooltip>
+                        <div class="content_title">Help on its way</div>
+                        <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
+                      </div>
                     </a>
 
                     <a (click)="triggerFinalDownload('bdoc', true)">
@@ -203,6 +214,10 @@
                         </svg>
                       </div>
                       <span translate="COMPONENTS.TOPIC_VOTE_CAST.FINAL_OPTION_WITH_CSV"></span>
+                      <div class="tooltip" tooltip>
+                        <div class="content_title">Help on its way</div>
+                        <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
+                      </div>
                     </a>
                   </ng-container>
                   <a *ngIf="vote.authType === VOTE_AUTH_TYPES.soft"
