--- a/src/app/account/components/register-form/register-form.component.html
+++ b/src/app/account/components/register-form/register-form.component.html
@@ -3,8 +3,11 @@
     <div id="register_inputs_wrap">
       <cos-input placeholder="{{'COMPONENTS.REGISTER_FORM.PLACEHOLDER_NAME' | translate}}">
         <input id="name" formControlName="name" [placeholder]="'COMPONENTS.REGISTER_FORM.PLACEHOLDER_NAME' | translate"
-          (focus)="wWidth > 1024" [ngClass]="{'error_input': signUpForm.controls['name'].errors && signUpForm.controls['name'].errors['required'] && signUpForm.controls['name'].touched}" [maxlength]="255" required>
-        <label for="name" class="error_label" *ngIf="signUpForm.controls['name'].errors && signUpForm.controls['name'].errors['required'] && signUpForm.controls['name'].touched">
+          (focus)="wWidth > 1024"
+          [ngClass]="{'error_input': signUpForm.controls['name'].errors && signUpForm.controls['name'].errors['required'] && signUpForm.controls['name'].touched}"
+          [maxlength]="255" required>
+        <label for="name" class="error_label"
+          *ngIf="signUpForm.controls['name'].errors && signUpForm.controls['name'].errors['required'] && signUpForm.controls['name'].touched">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
               d="M8.89438 1.78863C8.52586 1.05158 7.47405 1.05158 7.10553 1.78863L0.723562 14.5526C0.391112 15.2175 0.874608 15.9998 1.61799 15.9998H14.3819C15.1253 15.9998 15.6088 15.2175 15.2763 14.5526L8.89438 1.78863ZM6.99996 6.99977C6.99996 6.44749 7.44767 5.99977 7.99996 5.99977C8.55224 5.99977 8.99996 6.44749 8.99996 6.99977V9.99977C8.99996 10.5521 8.55224 10.9998 7.99996 10.9998C7.44767 10.9998 6.99996 10.5521 6.99996 9.99977V6.99977ZM6.99996 12.9998C6.99996 12.4475 7.44767 11.9998 7.99996 11.9998C8.55224 11.9998 8.99996 12.4475 8.99996 12.9998C8.99996 13.5521 8.55224 13.9998 7.99996 13.9998C7.44767 13.9998 6.99996 13.5521 6.99996 12.9998Z"
@@ -16,8 +19,10 @@
       <cos-input placeholder="{{'COMPONENTS.REGISTER_FORM.PLACEHOLDER_EMAIL' | translate}}">
         <input id="email" formControlName="email"
           [placeholder]="'COMPONENTS.REGISTER_FORM.PLACEHOLDER_EMAIL' | translate"
-          [ngClass]="{'error_input': signUpForm.controls['email'].errors && (signUpForm.controls['email'].errors['email'] || signUpForm.controls['email'].errors['required']) && signUpForm.controls['email'].touched}" [maxlength]="254" required>
-        <label for="email" class="error_label" *ngIf="signUpForm.controls['email'].errors && (signUpForm.controls['email'].errors['email'] || signUpForm.controls['email'].errors['required']) && signUpForm.controls['email'].touched">
+          [ngClass]="{'error_input': signUpForm.controls['email'].errors && (signUpForm.controls['email'].errors['email'] || signUpForm.controls['email'].errors['required']) && signUpForm.controls['email'].touched}"
+          [maxlength]="254" required>
+        <label for="email" class="error_label"
+          *ngIf="signUpForm.controls['email'].errors && (signUpForm.controls['email'].errors['email'] || signUpForm.controls['email'].errors['required']) && signUpForm.controls['email'].touched">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
               d="M8.89438 1.78863C8.52586 1.05158 7.47405 1.05158 7.10553 1.78863L0.723562 14.5526C0.391112 15.2175 0.874608 15.9998 1.61799 15.9998H14.3819C15.1253 15.9998 15.6088 15.2175 15.2763 14.5526L8.89438 1.78863ZM6.99996 6.99977C6.99996 6.44749 7.44767 5.99977 7.99996 5.99977C8.55224 5.99977 8.99996 6.44749 8.99996 6.99977V9.99977C8.99996 10.5521 8.55224 10.9998 7.99996 10.9998C7.44767 10.9998 6.99996 10.5521 6.99996 9.99977V6.99977ZM6.99996 12.9998C6.99996 12.4475 7.44767 11.9998 7.99996 11.9998C8.55224 11.9998 8.99996 12.4475 8.99996 12.9998C8.99996 13.5521 8.55224 13.9998 7.99996 13.9998C7.44767 13.9998 6.99996 13.5521 6.99996 12.9998Z"
@@ -83,7 +88,7 @@
             </svg>
           </div>
 
-          <div  class="error_text" translate="{{errors.terms}}"></div>
+          <div class="error_text" translate="{{errors.terms}}"></div>
         </label>
       </div>
     </div>
@@ -93,7 +98,12 @@
         <span class="checkmark"></span>
       </label>
       <div class="checbox_description"><span translate="COMPONENTS.REGISTER_FORM.LBL_SHOW_IN_SEARCH_DESCRIPTION"
-          (click)="allowSearch()"></span></div>
+          (click)="allowSearch()">
+          <div class="tooltip" tooltip>
+            <div class="content_title">Help on its way</div>
+            <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
+          </div>
+        </span></div>
     </div>
 
     <button id="register_button" type="submit" (click)="doSignUp()" class="btn_big_submit"
