--- a/src/app/ideation/components/add-idea-folder/add-idea-folder.component.html
+++ b/src/app/ideation/components/add-idea-folder/add-idea-folder.component.html
@@ -6,7 +6,10 @@
   <div class="dialog">
     <div class="dialog_header ideation">
       <div class="header_text">
-        <div class="title" translate="COMPONENTS.ADD_IDEA_FOLDER.HEADING"></div>
+        <div class="title" translate="COMPONENTS.ADD_IDEA_FOLDER.HEADING"><div class="tooltip" tooltip>
+          <div class="content_title">Help on its way</div>
+          <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
+        </div></div>
         <div class="dialog_close">
           <a class="btn_dialog_close icon" dialog-close>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
