--- a/src/app/ideation/components/add-ideas-to-folder/add-ideas-to-folder.component.html
+++ b/src/app/ideation/components/add-ideas-to-folder/add-ideas-to-folder.component.html
@@ -4,6 +4,9 @@
     <notification></notification>
   </div>
   <div class="dialog">
+    <div id="notification_wrap_dialog" class="mobile_show">
+      <notification></notification>
+    </div>
     <div class="dialog_header ideation">
       <div class="header_text">
         <div class="title" translate="COMPONENTS.ADD_IDEAS_TO_FOLDER.HEADING"></div>
