--- a/src/app/ideation/components/edit-ideation-deadline/edit-ideation-deadline.component.html
+++ b/src/app/ideation/components/edit-ideation-deadline/edit-ideation-deadline.component.html
@@ -4,6 +4,9 @@
     <notification></notification>
   </div>
   <div class="dialog">
+    <div id="notification_wrap_dialog" class="mobile_show">
+      <notification></notification>
+    </div>
     <div class="dialog_header ideation">
       <div class="header_text">
         <div class="small_heading" *ngIf="isNew" translate="COMPONENTS.EDIT_IDEATION_DEADLINE.DIALOG_HEADING_ADD"></div>
