--- a/src/app/ideation/components/idea-report-reason/idea-report-reason.component.html
+++ b/src/app/ideation/components/idea-report-reason/idea-report-reason.component.html
@@ -4,7 +4,7 @@
     <notification></notification>
   </div>
   <div class="dialog">
-    <div id="notification_wrap_dialog" class="mobile_hidden">
+    <div id="notification_wrap_dialog" class="mobile_show">
       <notification></notification>
     </div>
     <div class="dialog_header">
