--- a/src/app/ideation/components/idea-report/idea-report.component.html
+++ b/src/app/ideation/components/idea-report/idea-report.component.html
@@ -4,6 +4,9 @@
     <notification></notification>
   </div>
   <div class="dialog">
+    <div id="notification_wrap_dialog" class="mobile_show">
+      <notification></notification>
+    </div>
     <div class="dialog_header warning">
       <div class="header_with_icon">
         <div class="icon_notification">
