--- a/src/app/topic/components/topic-follow-up-create-dialog/topic-follow-up-create-dialog.component.html
+++ b/src/app/topic/components/topic-follow-up-create-dialog/topic-follow-up-create-dialog.component.html
@@ -4,6 +4,9 @@
     <notification></notification>
   </div>
   <div class="dialog">
+    <div id="notification_wrap_dialog" class="mobile_show">
+      <notification></notification>
+    </div>
     <div class="dialog_header follow_up">
       <div class="header_text">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
