--- a/src/app/topic/components/topic-join/topic-join.component.html
+++ b/src/app/topic/components/topic-join/topic-join.component.html
@@ -4,7 +4,7 @@
     <notification></notification>
   </div>
   <div class="dialog">
-    <div id="notification_wrap_dialog" class="mobile_hidden">
+    <div id="notification_wrap_dialog" class="mobile_show">
       <notification></notification>
     </div>
     <div class="dialog_header">
