--- a/src/app/topic/components/topic-vote-deadline/topic-vote-deadline.component.html
+++ b/src/app/topic/components/topic-vote-deadline/topic-vote-deadline.component.html
@@ -4,6 +4,9 @@
     <notification></notification>
   </div>
   <div class="dialog">
+    <div id="notification_wrap_dialog" class="mobile_show">
+      <notification></notification>
+    </div>
     <div class="dialog_header voting">
       <div class="header_text">
         <div class="small_heading" *ngIf="isNew" translate="COMPONENTS.TOPIC_VOTE_DEADLINE.DIALOG_HEADING_ADD"></div>
