--- a/src/app/topic/components/topic-vote-sign-smartid/topic-vote-sign-smartid.component.html
+++ b/src/app/topic/components/topic-vote-sign-smartid/topic-vote-sign-smartid.component.html
@@ -4,6 +4,9 @@
     <notification></notification>
   </div>
   <div class="dialog">
+    <div id="notification_wrap_dialog" class="mobile_show">
+      <notification></notification>
+    </div>
     <div class="dialog_header voting">
       <div class="header_text">
         <h4 class="title" translate="MODALS.TOPIC_VOTE_SIGN_SMARTID_HEADING"></h4>
