--- a/src/app/topic/components/topic-invite/topic-invite.component.scss
+++ b/src/app/topic/components/topic-invite/topic-invite.component.scss
@@ -43,6 +43,11 @@
   }
 }
 
+.row_header {
+  &.dialog {
+    background-attachment: fixed;
+  }
+}
 .row_list {
   margin-bottom: 0;
   .row_cell {
@@ -57,7 +62,95 @@
   margin-bottom: 24px;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  vertical-align: middle;
+  align-items: center;
+  gap: 8px;
+
+  .row {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    padding: 8px 16px;
+    position: relative;
+    border-radius: 8px;
+
+    @include mixins.mobile {
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    &.header_row {
+      padding: 12px 16px;
+
+      @include mixins.mobile {
+        display: none;
+      }
+    }
+
+    &:nth-child(even) {
+      background-color: var(--color-surface-contrast);
+    }
+    .name,
+    .level,
+    .actions {
+      display: flex;
+      @include mixins.mobile {
+        gap: 8px;
+        justify-content: flex-start;
+        width: 100%;
+      }
+    }
+
+    .name {
+      flex: 4 4 0;
+      text-align: start;
+      justify-content: flex-start;
+      flex-direction: row;
+      align-items: center;
+      gap: 16px;
+    }
+
+    .level {
+      flex: 4 4 0;
+      justify-content: center;
+
+      .level_heading,
+      .dropdown {
+        flex: 2 2 0;
+      }
+      .button_heading {
+        justify-content: center;
+        flex: 2 2 0;
+        display: flex;
+      }
+
+      button {
+        flex: 1 1 0;
+      }
+
+      @include mixins.mobile {
+        width: 100%;
+        justify-content: space-between;
+        flex: initial;
+        gap: 8px;
+        .dropdown {
+          flex: initial;
+          width: 100%;
+        }
+        button {
+          flex: initial;
+          width: 32px;
+        }
+      }
+    }
+  }
+}
 #topic_members_list_wrap {
+  gap: 16px;
   .row_list {
     margin-bottom: 16px;
   }
