--- a/src/app/topic/components/topic-participants/topic-participants.component.html
+++ b/src/app/topic/components/topic-participants/topic-participants.component.html
@@ -89,11 +89,27 @@
             </div>
             <div class="line_separator"></div>
             <ng-container *ngIf="memberUsers$ | async as memberUsers">
-              <ng-container *ngFor="let user of memberUsers; index as i;">
-                <div class="row_list">
-                  <topic-member-user [member]="user" [topic]="topic"></topic-member-user>
+              <div class="container">
+                <div class="row header_row">
+                  <div class="name"><a translate="COMPONENTS.GROUP_INVITE.NAME"></a></div>
+                  <div class="level">
+                    <div class="level_heading" translate="COMPONENTS.GROUP_INVITE.ROLE">
+                      <div class="tooltip" tooltip>
+                        <div class="content_title">Help on its way</div>
+                        <div class="content_description">Help text coming soon! Please tell us what help you were
+                          looking for.</div>
+                      </div>
+                    </div>
+
+                    <div class="button_heading" translate="COMPONENTS.GROUP_INVITE.ACTIONS"></div>
+                  </div>
                 </div>
-              </ng-container>
+                <ng-container *ngFor="let user of memberUsers; index as i;">
+                  <div class="row_list">
+                    <topic-member-user [member]="user" [topic]="topic"></topic-member-user>
+                  </div>
+                </ng-container>
+              </div>
               <div class="line_separator"></div>
               <div id="footer_buttons">
                 <!--div class="dropdown" [cosDropdown]>
