--- a/src/app/topic/components/topic-participants/topic-participants.component.scss
+++ b/src/app/topic/components/topic-participants/topic-participants.component.scss
@@ -38,6 +38,9 @@ topic-member-user,
 topic-member-group,
 topic-member-invite {
   display: contents;
+  &:nth-child(even) {
+    background-color: var(--color-surface-contrast);
+  }
 }
 
 .dropdown {
@@ -45,6 +48,94 @@ topic-member-invite {
     .options {
       position: absolute;
       width: max-content;
+    }
+  }
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  vertical-align: middle;
+  align-items: center;
+  gap: 8px;
+
+  .row {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    padding: 8px 16px;
+    position: relative;
+    border-radius: 8px;
+
+    @include mixins.mobile {
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    &.header_row {
+      padding: 12px 0;
+
+      @include mixins.mobile {
+        display: none;
+      }
+    }
+
+    &:nth-child(even) {
+      background-color: var(--color-surface-contrast);
+    }
+    .name,
+    .level,
+    .actions {
+      display: flex;
+      @include mixins.mobile {
+        gap: 8px;
+        justify-content: flex-start;
+        width: 100%;
+      }
+    }
+
+    .name {
+      flex: 4 2 0;
+      text-align: start;
+      justify-content: flex-start;
+      flex-direction: row;
+      align-items: center;
+      gap: 16px;
+    }
+
+    .level {
+      flex: 2 2 0;
+      justify-content: center;
+
+      .level_heading,
+      .dropdown {
+        flex: 2 2 0;
+      }
+      .button_heading {
+        justify-content: center;
+        flex: 2 2 0;
+        display: flex;
+      }
+
+      button {
+        flex: 1 1 0;
+      }
+
+      @include mixins.mobile {
+        width: 100%;
+        justify-content: space-between;
+        flex: initial;
+        gap: 8px;
+        .dropdown {
+          flex: initial;
+          width: 100%;
+        }
+        button {
+          flex: initial;
+          width: 32px;
+        }
+      }
     }
   }
 }
