--- a/src/app/topic/components/topic-invite/topic-invite.component.html
+++ b/src/app/topic/components/topic-invite/topic-invite.component.html
@@ -110,7 +110,7 @@
     </ng-container>
     <ng-container *ngIf="members?.length">
       <div class="container">
-        <div class="row header_row" [ngClass]="{'dialog': dialog}">
+        <div class="row header_row">
           <div class="row header_row">
             <div class="name"><a translate="COMPONENTS.TOPIC_INVITE.NAME"></a></div>
             <div class="level">
