--- a/src/app/topic/components/topic-arguments/topic-arguments.component.html
+++ b/src/app/topic/components/topic-arguments/topic-arguments.component.html
@@ -197,7 +197,7 @@
       </defs>
     </svg>
     <div class="description_heading" translate="COMPONENTS.TOPIC_ARGUMENTS.NO_ARGUMENTS_HEADING"></div>
-    <div class="button" *ngIf="TopicService.canDelete(topic)">
+    <div class="button">
       <button class="btn_medium_submit" (click)="doAddArgument()">
         <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -214,6 +214,18 @@
           <span translate="COMPONENTS.TOPIC_ARGUMENTS.NO_ARGUMENTS_DESC_BEFORE"></span>
           <br>
           <br><span translate="COMPONENTS.TOPIC_ARGUMENTS.NO_ARGUMENTS_DESC_AFTER"></span>
+          <ng-container *ngIf="topic.status === TopicService.STATUSES.ideation">
+            <br>
+            <br><span class="bold" translate="COMPONENTS.TOPIC_ARGUMENTS.NO_ARGUMENTS_DESC_INFO"></span>
+          </ng-container>
+          <ng-container *ngIf="topic.status === TopicService.STATUSES.inProgress && !TopicService.canDelete(topic)">
+            <br>
+            <br><span class="bold" translate="COMPONENTS.TOPIC_ARGUMENTS.NO_ARGUMENTS_DESC_PARTICIPANTS"></span>
+          </ng-container>
+          <ng-container *ngIf="topic.status === TopicService.STATUSES.inProgress && TopicService.canDelete(topic)">
+            <br>
+            <br><span class="bold" translate="COMPONENTS.TOPIC_ARGUMENTS.NO_ARGUMENTS_DESC_ADMIN"></span>
+          </ng-container>
         </div>
       </div>
       <!--div class="description_video">
