--- a/src/app/public-topics/components/topicbox/topicbox.component.html
+++ b/src/app/public-topics/components/topicbox/topicbox.component.html
@@ -61,7 +61,7 @@
               fill="#DA7AB1" />
           </svg>
           <div class="bold" translate="COMPONENTS.TOPICBOX.HEADER_FOLLOW_UP"
-            [translateParams]="{value: (milestones$ | async)?.length}"></div>
+            [translateParams]="{value: (milestones$ | async)}"></div>
         </ng-container>
         <ng-container *ngIf="topic.status==='closed'">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
